Revised for DQM; includes MEtoEDMConverter

--- a/test/Zmumu_fromHLT.cfg
+++ b/test/Zmumu_fromHLT.cfg
@@ -1,45 +1,39 @@
 process HLTMuonOfflineAnalysis  = {
 
+// This runs the DQM-formatted analyzers on the input files, then converts
+// the monitor element (ME) directory structure into and EDM file.
+// To merge the histograms and get readable output, you must run 
+// PostProcessor.cfg
 
 #----------------- Input file ---------RAW+HLT file-----------------------
-  untracked PSet maxEvents = {untracked int32 input = -1}
+  untracked PSet maxEvents = {untracked int32 input = 10}
   source = PoolSource{
     untracked uint32 skipEvents=0
     untracked vstring fileNames ={
-'file:ZmumuStartup/4A3DAF35-E533-DD11-9D80-001617E30F56.root',
-'file:ZmumuStartup/4C567E3C-E533-DD11-901D-000423D99F3E.root',
-'file:ZmumuStartup/6EC2CB33-E533-DD11-9CFA-000423D944F0.root',
-'file:ZmumuStartup/74AF1646-E533-DD11-84EC-001617DBD556.root',
-'file:ZmumuStartup/7CFE4AAD-E833-DD11-8E44-001617E30D40.root',
-'file:ZmumuStartup/84D7FA33-E533-DD11-9334-000423D986C4.root',
-'file:ZmumuStartup/9685E295-E533-DD11-A07D-000423D987FC.root',
-'file:ZmumuStartup/9C28F593-E533-DD11-997C-000423D98BE8.root',
-'file:ZmumuStartup/C6E80E36-E533-DD11-9C52-000423D99394.root',
-'file:ZmumuStartup/EA426746-E533-DD11-BEEB-001617C3B6C6.root',
-'file:ZmumuStartup/FA1DBD3C-E533-DD11-93DF-000423D952C0.root'
+        '/store/relval/2008/6/22/RelVal-RelValZMM-1213986417-IDEAL_V2-2nd/0003/02B37383-BB40-DD11-A2D4-001617DBD288.root',
+        '/store/relval/2008/6/22/RelVal-RelValZMM-1213986417-IDEAL_V2-2nd/0003/144209B9-B840-DD11-BE12-000423D6B42C.root',
+        '/store/relval/2008/6/22/RelVal-RelValZMM-1213986417-IDEAL_V2-2nd/0003/205C2E06-B740-DD11-ADF2-0019DB2F3F9B.root',
+        '/store/relval/2008/6/22/RelVal-RelValZMM-1213986417-IDEAL_V2-2nd/0003/32AA32AD-AB40-DD11-816E-001D09F292D1.root',
+        '/store/relval/2008/6/22/RelVal-RelValZMM-1213986417-IDEAL_V2-2nd/0003/3A7C1C47-C140-DD11-9431-001617DBD230.root'
     }
   }
 
-service  = DQMStore {
-  untracked string referenceFileName = ""
-  untracked int32 verbose = 0
-}
+  include "Configuration/StandardSequences/data/Services.cff"
 
+  module filter = MCSingleParticleFilter {
+    untracked vint32 ParticleID={-13,13}
+    untracked vdouble MinPt={5,5}
+    untracked vdouble MaxEta={2.1,2.1}
+    untracked vdouble MinEta={-2.1,-2.1}
+  }
 
-module filter = MCSingleParticleFilter {
-   untracked vint32 ParticleID={-13,13}
-   untracked vdouble MinPt={5,5}
-   untracked vdouble MaxEta={2.1,2.1}
-   untracked vdouble MinEta={-2.1,-2.1}
- }
-
- module dump = EventContentAnalyzer{}
+  module dump = EventContentAnalyzer{}
 
 #------------ Efficiency/Rate Analyzer --------------------------------
  
   module RateAnalyzer = MuonTriggerRateTimeAnalyzer {
       untracked bool DQMStore = true
-      untracked string RootFileName = "ZmumuAnalyzer_210pre5_filterSTARTUP.root"
+      untracked string RootFileName = "Zmumu.root"
       bool UseMuonFromGenerator=true
       untracked InputTag GenLabel=source
       bool UseMuonFromReco=true
@@ -198,5 +192,13 @@ module filter = MCSingleParticleFilter {
 
 #------------ End path ------------------------------------------------
 
-  path analyzerpath = {filter,RateAnalyzer}
+  include "DQMServices/Components/data/MEtoEDMConverter.cfi"
+
+  module out = PoolOutputModule {
+    untracked string fileName = "ZmumuEDM.root"
+  }
+
+  path analyzerpath = {filter, RateAnalyzer, MEtoEDMConverter}
+
+  endpath outpath = {out}
 }
