Changed to reflect new histogram names for PostProcessor

--- a/test/PostProcessor.cfg
+++ b/test/PostProcessor.cfg
@@ -1,3 +1,8 @@
+// Requires input from a monitor element file that has been processed with
+// MEtoEDMConverter to be put into EDM format.  This process turns restores the
+// MonitorElements and adds efficiency histograms by dividing plots from the file
+
+
 process EDMtoMEConvert =
 {
     untracked PSet maxEvents = {untracked int32 input = -1}
@@ -9,7 +14,10 @@ process EDMtoMEConvert =
     {
 	untracked vstring fileNames =
 	{
-	    "file:ZtoEDM.root"
+	    //"file:RateTimeAnalyzer.root"
+
+"dcap://cmsdcap.hep.wisc.edu:22125/pnfs/hep.wisc.edu/data5/uscms01/jklukas/ZMMpre6/RateTimeAnalyzer_25.root"
+
 	}
     }
     
@@ -22,13 +30,43 @@ process EDMtoMEConvert =
 
     module postProcessor = PostProcessor {
         vstring commands = {
-            "E Efficiency 'Efficiency Plot' HLT/Muon/Distributions/hltSingleMuIso/MCTurnOn_hltSingleMuIsoL2PreFiltered HLT/Muon/Distributions/hltSingleMuIso/MCTurnOn_hltSingleMuIsoL1Filtered"
-         }
+"HLT/Muon/Distributions/hltSingleMuIso E MCTurnOn_hltSingleMuIsoL1Filtered 'L1 Turn On label=hltSingleMuIsoL1Filtered' MCNumTurnOn_hltSingleMuIsoL1Filtered MCptNorm_hltSingleMuIsoL1Filtered",
+"HLT/Muon/Distributions/hltSingleMuIso E MCeta_hltSingleMuIsoL1Filtered 'L1 #eta Efficiency label=hltSingleMuIsoL1Filtered' MCNumeta_hltSingleMuIsoL1Filtered MCetaNorm_hltSingleMuIsoL1Filtered",
+"HLT/Muon/Distributions/hltSingleMuIso E MCphi_hltSingleMuIsoL1Filtered 'L1 #phi Efficiency label=hltSingleMuIsoL1Filtered' MCNumphi_hltSingleMuIsoL1Filtered MCphiNorm_hltSingleMuIsoL1Filtered",
+"HLT/Muon/Distributions/hltSingleMuIso E MCTurnOn_hltSingleMuIsoL2PreFiltered 'Turn On label=hltSingleMuIsoL2PreFiltered' MCNumTurnOn_hltSingleMuIsoL2PreFiltered MCNumTurnOn_hltSingleMuIsoL1Filtered",
+"HLT/Muon/Distributions/hltSingleMuIso E MCeta_hltSingleMuIsoL2PreFiltered '#eta Efficiency label=hltSingleMuIsoL2PreFiltered' MCNumeta_hltSingleMuIsoL2PreFiltered MCNumeta_hltSingleMuIsoL1Filtered",
+"HLT/Muon/Distributions/hltSingleMuIso E MCphi_hltSingleMuIsoL2PreFiltered '#phi Efficiency label=hltSingleMuIsoL2PreFiltered' MCNumphi_hltSingleMuIsoL2PreFiltered MCNumphi_hltSingleMuIsoL1Filtered",
+"HLT/Muon/Distributions/hltSingleMuIso E MCTurnOn_hltSingleMuIsoL2IsoFiltered 'Turn On label=hltSingleMuIsoL2IsoFiltered' MCNumTurnOn_hltSingleMuIsoL2IsoFiltered MCNumTurnOn_hltSingleMuIsoL1Filtered",
+"HLT/Muon/Distributions/hltSingleMuIso E MCeta_hltSingleMuIsoL2IsoFiltered '#eta Efficiency label=hltSingleMuIsoL2IsoFiltered' MCNumeta_hltSingleMuIsoL2IsoFiltered MCNumeta_hltSingleMuIsoL1Filtered",
+"HLT/Muon/Distributions/hltSingleMuIso E MCphi_hltSingleMuIsoL2IsoFiltered '#phi Efficiency label=hltSingleMuIsoL2IsoFiltered' MCNumphi_hltSingleMuIsoL2IsoFiltered MCNumphi_hltSingleMuIsoL1Filtered",
+"HLT/Muon/Distributions/hltSingleMuIso E MCTurnOn_hltSingleMuIsoL3PreFiltered 'Turn On label=hltSingleMuIsoL3PreFiltered' MCNumTurnOn_hltSingleMuIsoL3PreFiltered MCNumTurnOn_hltSingleMuIsoL1Filtered",
+"HLT/Muon/Distributions/hltSingleMuIso E MCeta_hltSingleMuIsoL3PreFiltered '#eta Efficiency label=hltSingleMuIsoL3PreFiltered' MCNumeta_hltSingleMuIsoL3PreFiltered MCNumeta_hltSingleMuIsoL1Filtered",
+"HLT/Muon/Distributions/hltSingleMuIso E MCphi_hltSingleMuIsoL3PreFiltered '#phi Efficiency label=hltSingleMuIsoL3PreFiltered' MCNumphi_hltSingleMuIsoL3PreFiltered MCNumphi_hltSingleMuIsoL1Filtered",
+"HLT/Muon/Distributions/hltSingleMuIso E MCTurnOn_hltSingleMuIsoL3IsoFiltered 'Turn On label=hltSingleMuIsoL3IsoFiltered' MCNumTurnOn_hltSingleMuIsoL3IsoFiltered MCNumTurnOn_hltSingleMuIsoL1Filtered",
+"HLT/Muon/Distributions/hltSingleMuIso E MCeta_hltSingleMuIsoL3IsoFiltered '#eta Efficiency label=hltSingleMuIsoL3IsoFiltered' MCNumeta_hltSingleMuIsoL3IsoFiltered MCNumeta_hltSingleMuIsoL1Filtered",
+"HLT/Muon/Distributions/hltSingleMuIso E MCphi_hltSingleMuIsoL3IsoFiltered '#phi Efficiency label=hltSingleMuIsoL3IsoFiltered' MCNumphi_hltSingleMuIsoL3IsoFiltered MCNumphi_hltSingleMuIsoL1Filtered",
+
+"HLT/Muon/Distributions/hltSingleMuIso E RECOTurnOn_hltSingleMuIsoL1Filtered 'L1 Turn On label=hltSingleMuIsoL1Filtered' RECONumTurnOn_hltSingleMuIsoL1Filtered RECOptNorm_hltSingleMuIsoL1Filtered",
+"HLT/Muon/Distributions/hltSingleMuIso E RECOeta_hltSingleMuIsoL1Filtered 'L1 #eta Efficiency label=hltSingleMuIsoL1Filtered' RECONumeta_hltSingleMuIsoL1Filtered RECOetaNorm_hltSingleMuIsoL1Filtered",
+"HLT/Muon/Distributions/hltSingleMuIso E RECOphi_hltSingleMuIsoL1Filtered 'L1 #phi Efficiency label=hltSingleMuIsoL1Filtered' RECONumphi_hltSingleMuIsoL1Filtered RECOphiNorm_hltSingleMuIsoL1Filtered",
+"HLT/Muon/Distributions/hltSingleMuIso E RECOTurnOn_hltSingleMuIsoL2PreFiltered 'Turn On label=hltSingleMuIsoL2PreFiltered' RECONumTurnOn_hltSingleMuIsoL2PreFiltered RECONumTurnOn_hltSingleMuIsoL1Filtered",
+"HLT/Muon/Distributions/hltSingleMuIso E RECOeta_hltSingleMuIsoL2PreFiltered '#eta Efficiency label=hltSingleMuIsoL2PreFiltered' RECONumeta_hltSingleMuIsoL2PreFiltered RECONumeta_hltSingleMuIsoL1Filtered",
+"HLT/Muon/Distributions/hltSingleMuIso E RECOphi_hltSingleMuIsoL2PreFiltered '#phi Efficiency label=hltSingleMuIsoL2PreFiltered' RECONumphi_hltSingleMuIsoL2PreFiltered RECONumphi_hltSingleMuIsoL1Filtered",
+"HLT/Muon/Distributions/hltSingleMuIso E RECOTurnOn_hltSingleMuIsoL2IsoFiltered 'Turn On label=hltSingleMuIsoL2IsoFiltered' RECONumTurnOn_hltSingleMuIsoL2IsoFiltered RECONumTurnOn_hltSingleMuIsoL1Filtered",
+"HLT/Muon/Distributions/hltSingleMuIso E RECOeta_hltSingleMuIsoL2IsoFiltered '#eta Efficiency label=hltSingleMuIsoL2IsoFiltered' RECONumeta_hltSingleMuIsoL2IsoFiltered RECONumeta_hltSingleMuIsoL1Filtered",
+"HLT/Muon/Distributions/hltSingleMuIso E RECOphi_hltSingleMuIsoL2IsoFiltered '#phi Efficiency label=hltSingleMuIsoL2IsoFiltered' RECONumphi_hltSingleMuIsoL2IsoFiltered RECONumphi_hltSingleMuIsoL1Filtered",
+"HLT/Muon/Distributions/hltSingleMuIso E RECOTurnOn_hltSingleMuIsoL3PreFiltered 'Turn On label=hltSingleMuIsoL3PreFiltered' RECONumTurnOn_hltSingleMuIsoL3PreFiltered RECONumTurnOn_hltSingleMuIsoL1Filtered",
+"HLT/Muon/Distributions/hltSingleMuIso E RECOeta_hltSingleMuIsoL3PreFiltered '#eta Efficiency label=hltSingleMuIsoL3PreFiltered' RECONumeta_hltSingleMuIsoL3PreFiltered RECONumeta_hltSingleMuIsoL1Filtered",
+"HLT/Muon/Distributions/hltSingleMuIso E RECOphi_hltSingleMuIsoL3PreFiltered '#phi Efficiency label=hltSingleMuIsoL3PreFiltered' RECONumphi_hltSingleMuIsoL3PreFiltered RECONumphi_hltSingleMuIsoL1Filtered",
+"HLT/Muon/Distributions/hltSingleMuIso E RECOTurnOn_hltSingleMuIsoL3IsoFiltered 'Turn On label=hltSingleMuIsoL3IsoFiltered' RECONumTurnOn_hltSingleMuIsoL3IsoFiltered RECONumTurnOn_hltSingleMuIsoL1Filtered",
+"HLT/Muon/Distributions/hltSingleMuIso E RECOeta_hltSingleMuIsoL3IsoFiltered '#eta Efficiency label=hltSingleMuIsoL3IsoFiltered' RECONumeta_hltSingleMuIsoL3IsoFiltered RECONumeta_hltSingleMuIsoL1Filtered",
+"HLT/Muon/Distributions/hltSingleMuIso E RECOphi_hltSingleMuIsoL3IsoFiltered '#phi Efficiency label=hltSingleMuIsoL3IsoFiltered' RECONumphi_hltSingleMuIsoL3IsoFiltered RECONumphi_hltSingleMuIsoL1Filtered"
+        }
         untracked string subDir = "HLT/Muon/Distributions/hltSingleMuIso"
         ## Leave outputFileName to be Null string 
         ## if don't want to save histograms manually
         ## untracked string outputFileName = "" 
-        untracked string outputFileName = "Result.root"
+        untracked string outputFileName = "PostProcessor.root"
     }
 
     path p1 = { EDMtoMEConverter, postProcessor } 
