--- a/test/Zmumu_fromHLT.cfg
+++ b/test/Zmumu_fromHLT.cfg
@@ -21,10 +21,10 @@ process HLTMuonOfflineAnalysis  = {
   include "Configuration/StandardSequences/data/Services.cff"
 
   module filter = MCSingleParticleFilter {
-    untracked vint32 ParticleID={-13,13}
-    untracked vdouble MinPt={5,5}
-    untracked vdouble MaxEta={2.1,2.1}
-    untracked vdouble MinEta={-2.1,-2.1}
+    untracked vint32 ParticleID={ -13, 13 }
+    untracked vdouble MinPt={ 5, 5 }
+    untracked vdouble MaxEta={ 2.1, 2.1 }
+    untracked vdouble MinEta={ -2.1, -2.1 }
   }
 
   module dump = EventContentAnalyzer{}
@@ -183,7 +183,7 @@ process HLTMuonOfflineAnalysis  = {
     untracked vstring destinations = { "cout","HLTMuonVal.log" }
     untracked vstring categories =  {  "HLTMuonVal" }
     untracked vstring debugModules =  { "RateAnalyzer" }   
-    untracked PSet HLTMuonVal.log = {untracked string threshold = "INFO"
+    untracked PSet HLTMuonVallog = {untracked string threshold = "INFO"
                                    untracked PSet default = { untracked  int32 limit = 0 }
                                    untracked PSet HLTMuonVal  = { untracked int32 limit = 100000}
     }
