Added in reference to a fileList.cfi

--- a/test/RateTimeAnalyzer.cfg
+++ b/test/RateTimeAnalyzer.cfg
@@ -9,19 +9,17 @@ process HLTMuonOfflineAnalysis  = {
 
   #----------------- Input file ---------RAW+HLT file-----------------------
 
-  untracked PSet maxEvents = {untracked int32 input = 10000}
+  untracked PSet maxEvents = {untracked int32 input = -1}
   source = PoolSource{
-    untracked uint32 skipEvents=0
-    untracked vstring fileNames ={
-        '/store/relval/2008/6/22/RelVal-RelValZMM-1213986417-IDEAL_V2-2nd/0003/02B37383-BB40-DD11-A2D4-001617DBD288.root',
-        '/store/relval/2008/6/22/RelVal-RelValZMM-1213986417-IDEAL_V2-2nd/0003/144209B9-B840-DD11-BE12-000423D6B42C.root',
-        '/store/relval/2008/6/22/RelVal-RelValZMM-1213986417-IDEAL_V2-2nd/0003/205C2E06-B740-DD11-ADF2-0019DB2F3F9B.root',
-        '/store/relval/2008/6/22/RelVal-RelValZMM-1213986417-IDEAL_V2-2nd/0003/32AA32AD-AB40-DD11-816E-001D09F292D1.root',
+    untracked uint32 skipEvents = 0
+    untracked vstring fileNames = {
         '/store/relval/2008/6/22/RelVal-RelValZMM-1213986417-IDEAL_V2-2nd/0003/3A7C1C47-C140-DD11-9431-001617DBD230.root'
     }
   }
 
-  include "Configuration/StandardSequences/data/Services.cff"
+  include "HLTriggerOffline/test/fileList.cfi"
+
+  service = DQMStore{}
 
   module filter = MCSingleParticleFilter {
     untracked vint32 ParticleID={ -13, 13 }
