--- a/test/PostProcessor.cfg
+++ b/test/PostProcessor.cfg
@@ -5,9 +5,10 @@
 
 process EDMtoMEConvert =
 {
-    untracked PSet maxEvents = {untracked int32 input = -1}
+
+    untracked PSet maxEvents = { untracked int32 input = -1 }
     
-    include "FWCore/MessageService/data/MessageLogger.cfi"
+    service = MessageLogger { }
     
     ## Read in EDM file produced with MEtoEDMConverter
     source = PoolSource
