Removed filter from default path

--- a/test/RateTimeAnalyzer.cfg
+++ b/test/RateTimeAnalyzer.cfg
@@ -9,7 +9,7 @@ process HLTMuonOfflineAnalysis  = {
 
   #----------------- Input file ---------RAW+HLT file-----------------------
 
-  untracked PSet maxEvents = {untracked int32 input = 10000}
+  untracked PSet maxEvents = {untracked int32 input = 10000 }
   source = PoolSource{
     untracked uint32 skipEvents = 0
     untracked vstring fileNames = {
@@ -209,7 +209,8 @@ process HLTMuonOfflineAnalysis  = {
     }
   }
 
-  path analyzerpath = {filter, RateAnalyzer, MEtoEDMConverter}
+  // path analyzerpath = { filter, RateAnalyzer, MEtoEDMConverter }
+  path analyzerpath = { RateAnalyzer, MEtoEDMConverter }
 
   endpath outpath = {out}
 }
