Added instructional comments about fileList.cfi

--- a/test/RateTimeAnalyzer.cfg
+++ b/test/RateTimeAnalyzer.cfg
@@ -17,6 +17,9 @@ process HLTMuonOfflineAnalysis  = {
     }
   }
 
+  // File lists for various releases are stored in 
+  // /afs/cern.ch/user/k/klukas/webHLT/fileLists/
+  // One of these should be copied to this directory, or comment out this line
   include "HLTriggerOffline/Muon/test/fileList.cfi"
 
   service = DQMStore{}
