Added filter as default; changed default maxEvents to -1

--- a/test/PostProcessor.cfg
+++ b/test/PostProcessor.cfg
@@ -58,9 +58,29 @@ process EDMtoMEConvert =
 "HLT/Muon/Distributions/hltSingleMuIso E RECOphi_hltSingleMuIsoL3PreFiltered '#phi Efficiency label=hltSingleMuIsoL3PreFiltered' RECONumphi_hltSingleMuIsoL3PreFiltered RECONumphi_hltSingleMuIsoL1Filtered 'Reconstructed Muon #phi' 'L3 Pass / L1 Pass (%)'",
 "HLT/Muon/Distributions/hltSingleMuIso E RECOTurnOn_hltSingleMuIsoL3IsoFiltered 'Turn On label=hltSingleMuIsoL3IsoFiltered' RECOMaxPtPass_hltSingleMuIsoL3IsoFiltered RECOMaxPtPass_hltSingleMuIsoL1Filtered 'Highest Reconstructed Muon p_{T} (GeV)' 'L3 Pass / L1 Pass (%)'",
 "HLT/Muon/Distributions/hltSingleMuIso E RECOeta_hltSingleMuIsoL3IsoFiltered '#eta Efficiency label=hltSingleMuIsoL3IsoFiltered' RECONumeta_hltSingleMuIsoL3IsoFiltered RECONumeta_hltSingleMuIsoL1Filtered 'Reconstructed Muon #eta' 'L3 Pass / L1 Pass (%)'",
-"HLT/Muon/Distributions/hltSingleMuIso E RECOphi_hltSingleMuIsoL3IsoFiltered '#phi Efficiency label=hltSingleMuIsoL3IsoFiltered' RECONumphi_hltSingleMuIsoL3IsoFiltered RECONumphi_hltSingleMuIsoL1Filtered 'Reconstructed Muon #phi' 'L3 Pass / L1 Pass (%)'"
+"HLT/Muon/Distributions/hltSingleMuIso E RECOphi_hltSingleMuIsoL3IsoFiltered '#phi Efficiency label=hltSingleMuIsoL3IsoFiltered' RECONumphi_hltSingleMuIsoL3IsoFiltered RECONumphi_hltSingleMuIsoL1Filtered 'Reconstructed Muon #phi' 'L3 Pass / L1 Pass (%)'",
+
+"HLT/Muon/Distributions/hltSingleMuNoIso E MCTurnOn_hltSingleMuNoIsoL1Filtered 'L1 Turn On label=hltSingleMuNoIsoL1Filtered' MCMaxPtPass_hltSingleMuNoIsoL1Filtered MCMaxPt_hltSingleMuNoIsoL1Filtered 'Highest Generated Muon p_{T} (GeV)' 'L1 Pass / Gen (%)'",
+"HLT/Muon/Distributions/hltSingleMuNoIso E MCeta_hltSingleMuNoIsoL1Filtered 'L1 #eta Efficiency label=hltSingleMuNoIsoL1Filtered' MCNumeta_hltSingleMuNoIsoL1Filtered MCetaNorm_hltSingleMuNoIsoL1Filtered 'Generated Muon #eta' 'L1 Pass / Gen (%)'",
+"HLT/Muon/Distributions/hltSingleMuNoIso E MCphi_hltSingleMuNoIsoL1Filtered 'L1 #phi Efficiency label=hltSingleMuNoIsoL1Filtered' MCNumphi_hltSingleMuNoIsoL1Filtered MCphiNorm_hltSingleMuNoIsoL1Filtered 'Generated Muon #phi' 'L1 Pass / Gen (%)'",
+"HLT/Muon/Distributions/hltSingleMuNoIso E MCTurnOn_hltSingleMuNoIsoL2PreFiltered 'Turn On label=hltSingleMuNoIsoL2PreFiltered' MCMaxPtPass_hltSingleMuNoIsoL2PreFiltered MCMaxPtPass_hltSingleMuNoIsoL1Filtered 'Highest Generated Muon p_{T} (GeV)' 'L2 Pass / L1 Pass (%)'",
+"HLT/Muon/Distributions/hltSingleMuNoIso E MCeta_hltSingleMuNoIsoL2PreFiltered '#eta Efficiency label=hltSingleMuNoIsoL2PreFiltered' MCNumeta_hltSingleMuNoIsoL2PreFiltered MCNumeta_hltSingleMuNoIsoL1Filtered 'Generated Muon #eta' 'L2 Pass / L1 Pass (%)'",
+"HLT/Muon/Distributions/hltSingleMuNoIso E MCphi_hltSingleMuNoIsoL2PreFiltered '#phi Efficiency label=hltSingleMuNoIsoL2PreFiltered' MCNumphi_hltSingleMuNoIsoL2PreFiltered MCNumphi_hltSingleMuNoIsoL1Filtered 'Generated Muon #phi' 'L2 Pass / L1 Pass (%)'",
+"HLT/Muon/Distributions/hltSingleMuNoIso E MCTurnOn_hltSingleMuNoIsoL3PreFiltered 'Turn On label=hltSingleMuNoIsoL3PreFiltered' MCMaxPtPass_hltSingleMuNoIsoL3PreFiltered MCMaxPtPass_hltSingleMuNoIsoL1Filtered 'Highest Generated Muon p_{T} (GeV)' 'L3 Pass / L1 Pass (%)'",
+"HLT/Muon/Distributions/hltSingleMuNoIso E MCeta_hltSingleMuNoIsoL3PreFiltered '#eta Efficiency label=hltSingleMuNoIsoL3PreFiltered' MCNumeta_hltSingleMuNoIsoL3PreFiltered MCNumeta_hltSingleMuNoIsoL1Filtered 'Generated Muon #eta' 'L3 Pass / L1 Pass (%)'",
+"HLT/Muon/Distributions/hltSingleMuNoIso E MCphi_hltSingleMuNoIsoL3PreFiltered '#phi Efficiency label=hltSingleMuNoIsoL3PreFiltered' MCNumphi_hltSingleMuNoIsoL3PreFiltered MCNumphi_hltSingleMuNoIsoL1Filtered 'Generated Muon #phi' 'L3 Pass / L1 Pass (%)'",
+
+"HLT/Muon/Distributions/hltSingleMuNoIso E RECOTurnOn_hltSingleMuNoIsoL1Filtered 'L1 Turn On label=hltSingleMuNoIsoL1Filtered' RECOMaxPtPass_hltSingleMuNoIsoL1Filtered RECOMaxPt_hltSingleMuNoIsoL1Filtered 'Highest Reconstructed Muon p_{T} (GeV)' 'L1 Pass / Reco (%)'",
+"HLT/Muon/Distributions/hltSingleMuNoIso E RECOeta_hltSingleMuNoIsoL1Filtered 'L1 #eta Efficiency label=hltSingleMuNoIsoL1Filtered' RECONumeta_hltSingleMuNoIsoL1Filtered RECOetaNorm_hltSingleMuNoIsoL1Filtered 'Reconstructed Muon #eta' 'L1 Pass / Reco (%)'",
+"HLT/Muon/Distributions/hltSingleMuNoIso E RECOphi_hltSingleMuNoIsoL1Filtered 'L1 #phi Efficiency label=hltSingleMuNoIsoL1Filtered' RECONumphi_hltSingleMuNoIsoL1Filtered RECOphiNorm_hltSingleMuNoIsoL1Filtered 'Reconstructed Muon #phi' 'L1 Pass / Reco (%)'",
+"HLT/Muon/Distributions/hltSingleMuNoIso E RECOTurnOn_hltSingleMuNoIsoL2PreFiltered 'Turn On label=hltSingleMuNoIsoL2PreFiltered' RECOMaxPtPass_hltSingleMuNoIsoL2PreFiltered RECOMaxPtPass_hltSingleMuNoIsoL1Filtered 'Highest Reconstructed Muon p_{T} (GeV)' 'L2 Pass / L1 Pass (%)'",
+"HLT/Muon/Distributions/hltSingleMuNoIso E RECOeta_hltSingleMuNoIsoL2PreFiltered '#eta Efficiency label=hltSingleMuNoIsoL2PreFiltered' RECONumeta_hltSingleMuNoIsoL2PreFiltered RECONumeta_hltSingleMuNoIsoL1Filtered 'Reconstructed Muon #eta' 'L2 Pass / L1 Pass (%)'",
+"HLT/Muon/Distributions/hltSingleMuNoIso E RECOphi_hltSingleMuNoIsoL2PreFiltered '#phi Efficiency label=hltSingleMuNoIsoL2PreFiltered' RECONumphi_hltSingleMuNoIsoL2PreFiltered RECONumphi_hltSingleMuNoIsoL1Filtered 'Reconstructed Muon #phi' 'L2 Pass / L1 Pass (%)'",
+"HLT/Muon/Distributions/hltSingleMuNoIso E RECOTurnOn_hltSingleMuNoIsoL3PreFiltered 'Turn On label=hltSingleMuNoIsoL3PreFiltered' RECOMaxPtPass_hltSingleMuNoIsoL3PreFiltered RECOMaxPtPass_hltSingleMuNoIsoL1Filtered 'Highest Reconstructed Muon p_{T} (GeV)' 'L3 Pass / L1 Pass (%)'",
+"HLT/Muon/Distributions/hltSingleMuNoIso E RECOeta_hltSingleMuNoIsoL3PreFiltered '#eta Efficiency label=hltSingleMuNoIsoL3PreFiltered' RECONumeta_hltSingleMuNoIsoL3PreFiltered RECONumeta_hltSingleMuNoIsoL1Filtered 'Reconstructed Muon #eta' 'L3 Pass / L1 Pass (%)'",
+"HLT/Muon/Distributions/hltSingleMuNoIso E RECOphi_hltSingleMuNoIsoL3PreFiltered '#phi Efficiency label=hltSingleMuNoIsoL3PreFiltered' RECONumphi_hltSingleMuNoIsoL3PreFiltered RECONumphi_hltSingleMuNoIsoL1Filtered 'Reconstructed Muon #phi' 'L3 Pass / L1 Pass (%)'"
         }
-        untracked string subDir = "HLT/Muon/Distributions/hltSingleMuIso"
+        untracked string subDir = ""
         ## Leave outputFileName to be Null string 
         ## if don't want to save histograms manually
         ## untracked string outputFileName = "" 
