--- a/test/muonTriggerRateTimeAnalyzer.cfg
+++ b/test/muonTriggerRateTimeAnalyzer.cfg
@@ -9,7 +9,7 @@ process HLTMuonOfflineAnalysis  = {
 
   #----------------- Input file ---------RAW+HLT file-----------------------
 
-  untracked PSet maxEvents = {untracked int32 input = 10 }
+  untracked PSet maxEvents = {untracked int32 input = -1 }
   source = PoolSource{
     untracked uint32 skipEvents = 0
     untracked vstring fileNames = {
@@ -67,8 +67,8 @@ process HLTMuonOfflineAnalysis  = {
     }
   }
 
-  // path analyzerpath = { filter, muonTriggerRateTimeAnalyzer, MEtoEDMConverter }
-  path analyzerpath = { muonTriggerRateTimeAnalyzer, MEtoEDMConverter }
+  path analyzerpath = { filter, muonTriggerRateTimeAnalyzer, MEtoEDMConverter }
+  // path analyzerpath = { muonTriggerRateTimeAnalyzer, MEtoEDMConverter }
 
   endpath outpath = {out}
 }
