Added SingleMuNoIso paths

--- a/test/PostProcessor.cfg
+++ b/test/PostProcessor.cfg
@@ -1,6 +1,6 @@
 // Requires input from a monitor element file that has been processed with
 // MEtoEDMConverter to be put into EDM format.  This process turns restores the
-// MonitorElements and adds efficiency histograms by dividing plots from the file
+// MonitorElements and adds efficiency histograms by dividing plots from the file.
 
 
 process EDMtoMEConvert =
