Enforced filter by adding path to SelectEvents in PoolOutputModule

--- a/test/muonTriggerRateTimeAnalyzer.cfg
+++ b/test/muonTriggerRateTimeAnalyzer.cfg
@@ -61,14 +61,18 @@ process HLTMuonOfflineAnalysis  = {
 
   module out = PoolOutputModule {
     untracked string fileName = "RateTimeAnalyzer.root"
+    untracked PSet SelectEvents = 
+    {
+      vstring SelectEvents = { "filterPath" }
+    }
     untracked vstring outputCommands = {
             "drop *",
 	    "keep *_MEtoEDMConverter_*_*"
     }
   }
 
-  path analyzerpath = { filter, muonTriggerRateTimeAnalyzer, MEtoEDMConverter }
-  // path analyzerpath = { muonTriggerRateTimeAnalyzer, MEtoEDMConverter }
+  path filterPath = { filter }
+  path analyzerpath = { muonTriggerRateTimeAnalyzer, MEtoEDMConverter }
 
   endpath outpath = {out}
 }
