--- a/test/muonTriggerRateTimeAnalyzer.cfg
+++ b/test/muonTriggerRateTimeAnalyzer.cfg
@@ -12,9 +12,7 @@ process HLTMuonOfflineAnalysis  = {
   untracked PSet maxEvents = {untracked int32 input = -1 }
   source = PoolSource{
     untracked uint32 skipEvents = 0
-    untracked vstring fileNames = {
-
-    }
+    untracked vstring fileNames = {}
   }
 
   // File lists for various releases are stored in 
@@ -34,25 +32,24 @@ process HLTMuonOfflineAnalysis  = {
   module dump = EventContentAnalyzer{}
 
 
-
   #------------ Efficiency/Rate Analyzer --------------------------------
  
   include "HLTriggerOffline/Muon/data/muonTriggerRateTimeAnalyzer.cfi"
-
+  // replace muonTriggerRateTimeAnalyzer.MotherParticleId = 24
 
 
   #------------ Message Logger ------------------------------------------
    service = MessageLogger {
     untracked vstring destinations = { "cout","HLTMuonVal.log" }
-    untracked vstring categories =  {  "HLTMuonVal" }
-    untracked vstring debugModules =  { "RateAnalyzer" }   
-    untracked PSet HLTMuonVallog = { untracked string threshold = "INFO"
-                                     untracked PSet default = { untracked  int32 limit = 0 }
-                                     untracked PSet HLTMuonVal  = { untracked int32 limit = 100000}
+    untracked vstring categories =   {  "HLTMuonVal" }
+    untracked vstring debugModules = { "RateAnalyzer" }   
+    untracked PSet HLTMuonVallog =   { 
+              untracked string threshold = "INFO"
+              untracked PSet default = { untracked  int32 limit = 0 }
+              untracked PSet HLTMuonVal  = { untracked int32 limit = 100000}
     }
     untracked PSet cout = { untracked string threshold = "WARNING" } 
    }
-
 
 
   #------------ End path ------------------------------------------------
@@ -67,8 +64,9 @@ process HLTMuonOfflineAnalysis  = {
     }
   }
 
-  path filterPath = { filter }
+  path filterPath   = { filter }
   path analyzerpath = { muonTriggerRateTimeAnalyzer, MEtoEDMConverter }
 
-  endpath outpath = {out}
+  endpath outpath   = { out }
+
 }
