--- a/test/muonTriggerRateTimeAnalyzer.cfg
+++ b/test/muonTriggerRateTimeAnalyzer.cfg
@@ -12,7 +12,9 @@ process HLTMuonOfflineAnalysis  = {
   untracked PSet maxEvents = {untracked int32 input = -1 }
   source = PoolSource{
     untracked uint32 skipEvents = 0
-    untracked vstring fileNames = {}
+    untracked vstring fileNames = {
+        '/store/relval/2008/6/22/RelVal-RelValZMM-1213986417-IDEAL_V2-2nd/0003/3A7C1C47-C140-DD11-9431-001617DBD230.root'
+    }
   }
 
   // File lists for various releases are stored in 
@@ -23,33 +25,35 @@ process HLTMuonOfflineAnalysis  = {
   service = DQMStore{}
 
   module filter = MCSingleParticleFilter {
-    untracked vint32 ParticleID={ -13, 13 }
-    untracked vdouble MinPt={ 5, 5 }
-    untracked vdouble MaxEta={ 2.1, 2.1 }
-    untracked vdouble MinEta={ -2.1, -2.1 }
+    untracked vint32  ParticleID = {  -13,   13 }
+    untracked vdouble MinPt      = {    5,    5 }
+    untracked vdouble MaxEta     = {  2.1,  2.1 }
+    untracked vdouble MinEta     = { -2.1, -2.1 }
   }
 
   module dump = EventContentAnalyzer{}
 
 
+
   #------------ Efficiency/Rate Analyzer --------------------------------
  
   include "HLTriggerOffline/Muon/data/muonTriggerRateTimeAnalyzer.cfi"
-  // replace muonTriggerRateTimeAnalyzer.MotherParticleId = 24
+
 
 
   #------------ Message Logger ------------------------------------------
    service = MessageLogger {
     untracked vstring destinations = { "cout","HLTMuonVal.log" }
-    untracked vstring categories =   {  "HLTMuonVal" }
-    untracked vstring debugModules = { "RateAnalyzer" }   
-    untracked PSet HLTMuonVallog =   { 
+    untracked vstring categories =  {  "HLTMuonVal" }
+    untracked vstring debugModules =  { "RateAnalyzer" }   
+    untracked PSet HLTMuonVallog = { 
               untracked string threshold = "INFO"
-              untracked PSet default = { untracked  int32 limit = 0 }
+              untracked PSet default     = { untracked  int32 limit = 0 }
               untracked PSet HLTMuonVal  = { untracked int32 limit = 100000}
     }
     untracked PSet cout = { untracked string threshold = "WARNING" } 
    }
+
 
 
   #------------ End path ------------------------------------------------
@@ -64,9 +68,8 @@ process HLTMuonOfflineAnalysis  = {
     }
   }
 
-  path filterPath   = { filter }
+  path filterPath =   { filter }
   path analyzerpath = { muonTriggerRateTimeAnalyzer, MEtoEDMConverter }
 
-  endpath outpath   = { out }
-
+  endpath outpath =   { out }
 }
