--- a/test/muonTriggerRateTimeAnalyzer.cfg
+++ b/test/muonTriggerRateTimeAnalyzer.cfg
@@ -25,10 +25,10 @@ process HLTMuonOfflineAnalysis  = {
   service = DQMStore{}
 
   module filter = MCSingleParticleFilter {
-    untracked vint32 ParticleID={ -13, 13 }
-    untracked vdouble MinPt={ 5, 5 }
-    untracked vdouble MaxEta={ 2.1, 2.1 }
-    untracked vdouble MinEta={ -2.1, -2.1 }
+    untracked vint32  ParticleID = {  -13,   13 }
+    untracked vdouble MinPt      = {    5,    5 }
+    untracked vdouble MaxEta     = {  2.1,  2.1 }
+    untracked vdouble MinEta     = { -2.1, -2.1 }
   }
 
   module dump = EventContentAnalyzer{}
@@ -46,9 +46,10 @@ process HLTMuonOfflineAnalysis  = {
     untracked vstring destinations = { "cout","HLTMuonVal.log" }
     untracked vstring categories =  {  "HLTMuonVal" }
     untracked vstring debugModules =  { "RateAnalyzer" }   
-    untracked PSet HLTMuonVallog = { untracked string threshold = "INFO"
-                                     untracked PSet default = { untracked  int32 limit = 0 }
-                                     untracked PSet HLTMuonVal  = { untracked int32 limit = 100000}
+    untracked PSet HLTMuonVallog = { 
+              untracked string threshold = "INFO"
+              untracked PSet default     = { untracked  int32 limit = 0 }
+              untracked PSet HLTMuonVal  = { untracked int32 limit = 100000}
     }
     untracked PSet cout = { untracked string threshold = "WARNING" } 
    }
@@ -61,18 +62,14 @@ process HLTMuonOfflineAnalysis  = {
 
   module out = PoolOutputModule {
     untracked string fileName = "RateTimeAnalyzer.root"
-    untracked PSet SelectEvents = 
-    {
-      vstring SelectEvents = { "filterPath" }
-    }
     untracked vstring outputCommands = {
             "drop *",
 	    "keep *_MEtoEDMConverter_*_*"
     }
   }
 
-  path filterPath = { filter }
+  path filterPath =   { filter }
   path analyzerpath = { muonTriggerRateTimeAnalyzer, MEtoEDMConverter }
 
-  endpath outpath = {out}
+  endpath outpath =   { out }
 }
