Included filter in main path

--- a/test/muonTriggerRateTimeAnalyzer.cfg
+++ b/test/muonTriggerRateTimeAnalyzer.cfg
@@ -68,8 +68,7 @@ process HLTMuonOfflineAnalysis  = {
     }
   }
 
-  path filterPath =   { filter }
-  path analyzerpath = { muonTriggerRateTimeAnalyzer, MEtoEDMConverter }
+  path analyzerpath = { filter, muonTriggerRateTimeAnalyzer, MEtoEDMConverter }
+  endpath outpath   = { out }
 
-  endpath outpath =   { out }
 }
